--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular-resource.js"></script>-->
 	<script src="js/angular.js"></script>
 	<script src="js/angular-resource.js"></script>
+	<script src="js/filters.js"></script>
 	<script src="js/services.js"></script>
 	<script src="js/controllers.js"></script>
 	<script src="js/app.js"></script>
