added basic create functionality in REST api

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
 
 <body>
 	
+	<ul>
+	  <li><a href="#">Home</a></li>
+	  <li><a href="#/people">People</a></li>
+	  <li><a href="#/items">Items</a></li>
+	</ul>
+	
+	<hr>
+	
 	<div data-ng-view>
 		<!-- current view will be inserted here -->
 	</div>
